fix: quick maps menu updates - #146 remove white space above map in initial 'Quick MAPS' view

--- a/src/app/pages/quickMaps/components/quickMapsHeader.component/quickMapsHeader.component.scss
+++ b/src/app/pages/quickMaps/components/quickMapsHeader.component/quickMapsHeader.component.scss
@@ -3,9 +3,13 @@
 .container {
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   & .active-route {
     background-color: $color_primary;
     color: white;
   }
+}
+
+a {
+  flex-shrink: 0;
 }
