--- a/src/app/pages/quickMaps/quickMaps.component.scss
+++ b/src/app/pages/quickMaps/quickMaps.component.scss
@@ -33,9 +33,6 @@ mat-drawer {
   transition: all 0.4s;
 }
 
-.menu-header {
-  margin-top: 10px;
-}
 app-quick-maps-header {
-  width: 100%;
+  margin-top: 10px;
 }
